--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-three/fiber": "^8.17.6",
     "axios": "^1.6.5",
     "framer-motion": "^12.26.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.12.0",
     "three": "^0.182.0"
   },
