--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ python-dotenv==1.0.0
 google-generativeai==0.3.2
 python-multipart==0.0.6
 Pillow==10.2.0
+
+torch
+transformers
+accelerate
+scipy
+faster-whisper
+numpy
