--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "framer-motion": "^12.26.2",
     "leaflet": "^1.9.4",
+    "locomotive-scroll": "^5.0.1",
     "lucide-react": "^0.309.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
