--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "leaflet": "^1.9.4",
     "locomotive-scroll": "^5.0.1",
     "lucide-react": "^0.309.0",
+    "numpy": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
